# png2pptx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: earth.pptx  sample_input.pptx
png2pptx/: __init__.py  cli.py  inpaint.py  layout.py  models.py  ocr.py  pptx_builder.py  quality.py  styles.py
tests/: test_inpaint.py  test_layout.py  test_ocr.py  test_ocr_helpers.py  test_ocr_refinement.py  test_pptx_builder.py  test_quality.py  test_styles.py
